--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,7 @@
 
 @layer utilities {
 
+
     @font-face {
         font-family: 'Gumela Regular';
         font-style: normal;
@@ -37,5 +38,41 @@
         to {
             width: 100%;
         }
+    }
+
+
+
+
+
+
+    #particles-js {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50% 50%;
+    }
+
+
+    .js-count-particles {
+        font-size: 1.1em;
+    }
+
+    #stats,
+    .count-particles {
+        -webkit-user-select: none;
+        margin-top: 5px;
+        margin-left: 5px;
+    }
+
+    #stats {
+        border-radius: 3px 3px 0 0;
+        overflow: hidden;
+    }
+
+    .count-particles {
+        border-radius: 0 0 3px 3px;
     }
 }
