--- a/src/input.css
+++ b/src/input.css
@@ -23,7 +23,13 @@
     }
 
     .main-header {
-        clip-path: polygon(0 0, 100% 0, 100% 41%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 35%, 0% 100%);
+
+       
+    }
+
+    .hero-area{
+         background-image: url(./img/home_bg.jpg); 
     }
 
     .hero-name {
@@ -40,39 +46,8 @@
         }
     }
 
+    .about-area{
+        clip-path: polygon(0 100%, 100% 100%, 100% 35%);
 
-
-
-
-
-    #particles-js {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: #000;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 50% 50%;
-    }
-
-
-    .js-count-particles {
-        font-size: 1.1em;
-    }
-
-    #stats,
-    .count-particles {
-        -webkit-user-select: none;
-        margin-top: 5px;
-        margin-left: 5px;
-    }
-
-    #stats {
-        border-radius: 3px 3px 0 0;
-        overflow: hidden;
-    }
-
-    .count-particles {
-        border-radius: 0 0 3px 3px;
     }
 }
